jan 3 commit